Add introductory paragraph

--- a/proposal/main.tex
+++ b/proposal/main.tex
@@ -48,7 +48,7 @@
 \newcommand{\q}[1]{``#1''}
 
 % Document information
-\newcommand{\thesisTitle}{Hybrid Agent-Based Modelling of Vector-Borne Diseases: Exploring the Effects of Human Behaviour and Risk Perception on Infection Dynamics}
+\newcommand{\thesisTitle}{Agent-Based Modelling of Vector-Borne Diseases: Exploring the Effects of Risk Perception and Human Behaviour on Infection Dynamics}
 
 \newcommand{\name}{Jack Oliver}
 
