--- a/proposal/refs.bib
+++ b/proposal/refs.bib
@@ -1285,25 +1285,6 @@ Conclusions:  While results show that personal-level protection alone is not e
 	file = {Winch et al. - 1992 - Effectiveness of community participation in vector.pdf:/Users/jack/Zotero/storage/2SIN2WCS/Winch et al. - 1992 - Effectiveness of community participation in vector.pdf:application/pdf},
 }
 
-@article{bardosh_addressing_2017-1,
-	title = {Addressing vulnerability, building resilience: community-based adaptation to vector-borne diseases in the context of global change},
-	volume = {6},
-	issn = {2049-9957},
-	shorttitle = {Addressing vulnerability, building resilience},
-	url = {https://idpjournal.biomedcentral.com/articles/10.1186/s40249-017-0375-2},
-	doi = {10.1186/s40249-017-0375-2},
-	abstract = {Background: The threat of a rapidly changing planet – of coupled social, environmental and climatic change –pose new conceptual and practical challenges in responding to vector-borne diseases. These include non-linear and uncertain spatial-temporal change dynamics associated with climate, animals, land, water, food, settlement, conflict, ecology and human socio-cultural, economic and political-institutional systems. To date, research efforts have been dominated by disease modeling, which has provided limited practical advice to policymakers and practitioners in developing policies and programmes on the ground. Main body: In this paper, we provide an alternative biosocial perspective grounded in social science insights, drawing upon concepts of vulnerability, resilience, participation and community-based adaptation. Our analysis was informed by a realist review (provided in the Additional file 2) focused on seven major climate-sensitive vectorborne diseases: malaria, schistosomiasis, dengue, leishmaniasis, sleeping sickness, chagas disease, and rift valley fever. Here, we situate our analysis of existing community-based interventions within the context of global change processes and the wider social science literature. We identify and discuss best practices and conceptual principles that should guide future community-based efforts to mitigate human vulnerability to vector-borne diseases. We argue that more focused attention and investments are needed in meaningful public participation, appropriate technologies, the strengthening of health systems, sustainable development, wider institutional changes and attention to the social determinants of health, including the drivers of co-infection. Conclusion: In order to respond effectively to uncertain future scenarios for vector-borne disease in a changing world, more attention needs to be given to building resilient and equitable systems in the present.},
-	language = {en},
-	number = {1},
-	urldate = {2024-03-10},
-	journal = {Infectious Diseases of Poverty},
-	author = {Bardosh, Kevin Louis and Ryan, Sadie J. and Ebi, Kris and Welburn, Susan and Singer, Burton},
-	month = dec,
-	year = {2017},
-	pages = {166},
-	file = {Bardosh et al. - 2017 - Addressing vulnerability, building resilience com.pdf:/Users/jack/Zotero/storage/KQHWKWKB/Bardosh et al. - 2017 - Addressing vulnerability, building resilience com.pdf:application/pdf},
-}
-
 @article{rivera_adoption_2023,
 	title = {Adoption of community-based strategies for sustainable vector control and prevention},
 	volume = {23},
@@ -1589,4 +1570,23 @@ Conclusions:  While results show that personal-level protection alone is not e
 	year = {2016},
 	pages = {1785--1788},
 	file = {Hemingway et al. - 2016 - Averting a malaria disaster will insecticide resi.pdf:/Users/jack/Zotero/storage/AG8HNQWJ/Hemingway et al. - 2016 - Averting a malaria disaster will insecticide resi.pdf:application/pdf},
+}
+
+@article{reiner_systematic_2013,
+	title = {A systematic review of mathematical models of mosquito-borne pathogen transmission: 1970–2010},
+	volume = {10},
+	issn = {1742-5689, 1742-5662},
+	shorttitle = {A systematic review of mathematical models of mosquito-borne pathogen transmission},
+	url = {https://royalsocietypublishing.org/doi/10.1098/rsif.2012.0921},
+	doi = {10.1098/rsif.2012.0921},
+	abstract = {Mathematical models of mosquito-borne pathogen transmission originated in the early twentieth century to provide insights into how to most effectively combat malaria. The foundations of the Ross–Macdonald theory were established by 1970. Since then, there has been a growing interest in reducing the public health burden of mosquito-borne pathogens and an expanding use of models to guide their control. To assess how theory has changed to confront evolving public health challenges, we compiled a bibliography of 325 publications from 1970 through 2010 that included at least one mathematical model of mosquito-borne pathogen transmission and then used a 79-part questionnaire to classify each of 388 associated models according to its biological assumptions. As a composite measure to interpret the multidimensional results of our survey, we assigned a numerical value to each model that measured its similarity to 15 core assumptions of the Ross–Macdonald model. Although the analysis illustrated a growing acknowledgement of geographical, ecological and epidemiological complexities in modelling transmission, most models during the past 40 years closely resemble the Ross–Macdonald model. Modern theory would benefit from an expansion around the concepts of heterogeneous mosquito biting, poorly mixed mosquito-host encounters, spatial heterogeneity and temporal variation in the transmission process.},
+	language = {en},
+	number = {81},
+	urldate = {2024-03-25},
+	journal = {Journal of The Royal Society Interface},
+	author = {Reiner, Robert C. and Perkins, T. Alex and Barker, Christopher M. and Niu, Tianchan and Chaves, Luis Fernando and Ellis, Alicia M. and George, Dylan B. and Le Menach, Arnaud and Pulliam, Juliet R. C. and Bisanzio, Donal and Buckee, Caroline and Chiyaka, Christinah and Cummings, Derek A. T. and Garcia, Andres J. and Gatton, Michelle L. and Gething, Peter W. and Hartley, David M. and Johnston, Geoffrey and Klein, Eili Y. and Michael, Edwin and Lindsay, Steven W. and Lloyd, Alun L. and Pigott, David M. and Reisen, William K. and Ruktanonchai, Nick and Singh, Brajendra K. and Tatem, Andrew J. and Kitron, Uriel and Hay, Simon I. and Scott, Thomas W. and Smith, David L.},
+	month = apr,
+	year = {2013},
+	pages = {20120921},
+	file = {Reiner et al. - 2013 - A systematic review of mathematical models of mosq.pdf:/Users/jack/Zotero/storage/YUCGNIMA/Reiner et al. - 2013 - A systematic review of mathematical models of mosq.pdf:application/pdf},
 }
