--- a/proposal/sections/1_introduction.tex
+++ b/proposal/sections/1_introduction.tex
@@ -1,6 +1,8 @@
 \section{Introduction}
 
-\subsection{Background}
+% \subsection{Background}
+
+Vector-borne diseases (VBDs) such as malaria, dengue, and chikungunya represent 17\% of all infectious diseases, accounting for more than 700,000 deaths annually \cite{world_health_organisation_who_vector-borne_2020}. While vector control methods such as mosquito repellents and insecticide-treated nets \todo{Does this need a citation?}effectively reduce disease transmission, these methods rely primarily on self-participation and voluntary adoption, which are driven by individuals' perceived risk of infection and personal behavioural attitudes. To help health practitioners address VBD spread, mathematical models have become increasingly popular to anticipate downward pressure on health systems and guide policy decisions for outbreak responses \cite{reiner_systematic_2013}. However, these models often do not incorporate human behaviour, \todo{Does this need a citation?}despite it being a major factor in determining vector control campaign efficacy. \todo[fancyline]{This paragraph is long. I can break here, but then it's no longer a single introductory paragraph.}\textit{Agent-based modelling} is an emerging computational technique that simulates the individual components (\textit{agents}) of a system to \textit{generate} complex phenomena indirectly \cite{epstein_growing_1996}, potentially offering a solution to directly encoding human behaviour. Despite the existing success of these models in VBD applications, there is still a lack of research investigating the interaction between human behaviour and vector control campaigns for VBD spread. In this research proposal, I propose a project to address this gap in the literature by using agent-based modelling to investigate the dynamics between VBDs, vector control campaigns, and risk perception alongside human behaviour.
 
 Vector-borne diseases (VBDs) such as malaria, dengue, and chikungunya represent 17\% of all infectious diseases, and account for more than 700,000 deaths annually \cite{world_health_organisation_who_vector-borne_2020}. With more than 80\% of the global population living in areas vulnerable to at least one VBD \cite{golding_integrating_2015}, \hlnote{VBDs}{I'm saying \q{VBD} consecutively - does it sound unnatural?} are evidently a major threat to public health infrastructure worldwide. Infections from VBDs occur when pathogens are transmitted to humans via arthropods (such as mosquitoes, sand flies, and ticks), and resulting epidemics place large burdens on health institutions, often stunting the economic development of communities and disproportionately affecting poorer nations \cite{lum_cost_2009, degroote_interventions_2018}.
 
@@ -12,7 +14,7 @@ Agent-based models (ABMs) are computational tools that have been extensively use
 
 ABMs have previously been used to examine how risk perception and preventive behaviours may affect disease dynamics in other infectious diseases \cite{abdulkareem_risk_2020, mao_modeling_2014, kandiah_empirical_2017, du_how_2021, tully_coevolution_2013, andrews_disease_2015}, and specifically applied to VBDs to study disease spread in various geographical and spatial regions \cite{krzhizhanovskaya_agent-based_2020, selvaraj_vector_2020, manore_network-patch_2015, linard_multi-agent_2009, jacintho_agent-based_2010, perkins_agent-based_2019, mulyani_agent_2017, maneerat_spatial_2016}. There is sparse research, however, that investigates how CBIs affect the spread of VBDs alongside the adoption of preventive measures, despite the fact that active community engagement has been shown to be necessary for effective vector control campaigns \cite{winch_effectiveness_1992, rivera_adoption_2023}. Furthermore, there is a minimal body of modelling research that explores how human behaviour and risk perception interact to compel the adoption of preventive measures for VBDs, despite existing literature suggesting the importance of incorporating agent decision-making processes in such models \cite{scheidegger_agent-based_2017, mateus_c_modeling_2021}.
 
-\subsection{Research objectives and aims}
+% \subsection{Research objectives and aims}
 
 The \todo{Should I explicitly state the research gaps, or is this segue OK?}two gaps in the literature outlined above form the basis of the following research questions:
 
@@ -27,7 +29,7 @@ The \todo{Should I explicitly state the research gaps, or is this segue OK?}two 
 This research aims to address these questions through a project of two phases with the following aims: \ref{rq1} aims to answer the open question of how encoding different behavioural frameworks in ABMs affects disease dynamics by creating a general VBD ABM with integrated agent decision-making processes. Within this baseline model, \ref{rq2} aims to investigate how targeted CBIs influence disease dynamics through the interaction of risk perception and \hlnote{preventive behaviours}{Not defined, is this an issue?}.
 
 
-\subsection{Proposal structure}
+% \subsection{Proposal structure}
 
 
 The structure of this proposal is as follows: First, I present an overview of existing work surrounding agent-based modelling, risk perception, mitigation methods for VBDs, and human behaviour to establish context and motivation for the project. Second, I outline the intended methods to carry out the research and the objectives of the two phases. Finally, I describe the prospective contributions and implications the research will have if successfully carried out.\vspace{.5cm}
