--- a/proposal/sections/1_introduction.tex
+++ b/proposal/sections/1_introduction.tex
@@ -1,43 +1,71 @@
 \section{Introduction}
 
-% \subsection{Background}
+\subsection{Background}
 
-Vector-borne diseases (VBDs) such as malaria, dengue, and chikungunya represent 17\% of all infectious diseases, accounting for more than 700,000 deaths annually \cite{world_health_organisation_who_vector-borne_2020}. While vector control methods such as mosquito repellents and insecticide-treated nets \todo{Does this need a citation?}effectively reduce disease transmission, these methods rely primarily on self-participation and voluntary adoption, which are driven by individuals' perceived risk of infection and personal behavioural attitudes. To help health practitioners address VBD spread, mathematical models have become increasingly popular to anticipate downward pressure on health systems and guide policy decisions for outbreak responses \cite{reiner_systematic_2013}. However, these models often do not incorporate human behaviour, \todo{Does this need a citation?}despite it being a major factor in determining vector control campaign efficacy. \todo[fancyline]{This paragraph is long. I can break here, but then it's no longer a single introductory paragraph.}\textit{Agent-based modelling} is an emerging computational technique that simulates the individual components (\textit{agents}) of a system to \textit{generate} complex phenomena indirectly \cite{epstein_growing_1996}, potentially offering a solution to directly encoding human behaviour. Despite the existing success of these models in VBD applications, there is still a lack of research investigating the interaction between human behaviour and vector control campaigns for VBD spread. In this research proposal, I propose a project to address this gap in the literature by using agent-based modelling to investigate the dynamics between VBDs, vector control campaigns, and risk perception alongside human behaviour.
+Vector-borne diseases (VBDs) such as malaria, dengue, and chikungunya represent 17\% of all infectious diseases, accounting for more than 700,000 deaths annually \cite{world_health_organisation_who_vector-borne_2020}. While vector control methods such as mosquito repellents and insecticide-treated nets effectively reduce disease transmission, these methods rely primarily on self-participation and voluntary adoption, which are driven by individuals' perceived risk of infection and personal behavioural attitudes. To help health practitioners address VBD spread, mathematical models have become increasingly popular to anticipate downward pressure on health systems and guide policy decisions for outbreak responses \cite{reiner_systematic_2013}. However, these models assume homogeneity of populations, and thus cannot incorporate heterogeneous human behavioural attitudes that influence participation in vector control. \textit{Agent-based modelling} is an emerging computational technique that simulates the individual components (\textit{agents}) of a system to \textit{generate} complex phenomena indirectly \cite{epstein_growing_1996}, potentially offering a solution for directly encoding human behaviour. Despite the existing success of agent-based models in VBD applications, there is still a lack of research investigating the interaction between human behaviour and vector control campaigns for VBD spread. In this research proposal, I propose a project to address this gap in the literature by using agent-based modelling to investigate the dynamics between VBDs, vector control campaigns, and risk perception alongside human behaviour.
 
-Vector-borne diseases (VBDs) such as malaria, dengue, and chikungunya represent 17\% of all infectious diseases, and account for more than 700,000 deaths annually \cite{world_health_organisation_who_vector-borne_2020}. With more than 80\% of the global population living in areas vulnerable to at least one VBD \cite{golding_integrating_2015}, \hlnote{VBDs}{I'm saying \q{VBD} consecutively - does it sound unnatural?} are evidently a major threat to public health infrastructure worldwide. Infections from VBDs occur when pathogens are transmitted to humans via arthropods (such as mosquitoes, sand flies, and ticks), and resulting epidemics place large burdens on health institutions, often stunting the economic development of communities and disproportionately affecting poorer nations \cite{lum_cost_2009, degroote_interventions_2018}.
+With more than 80\% of the global population living in areas vulnerable to at least one VBD \cite{golding_integrating_2015}, these diseases are a major threat to public health infrastructure worldwide. Infection can occur when pathogens are transmitted to humans via arthropods (such as mosquitoes, sandflies, and ticks), with resulting epidemics placing large burdens on health institutions, often stunting the economic development of communities and disproportionately affecting poorer nations \cite{lum_cost_2009, degroote_interventions_2018}. To avoid these negative consequences of VBDs, health officials employ vector control measures to curb disease spread in settings where alternative forms of intervention are not available, such as vaccination or medication.
 
-Vector control aims to limit human-vector contact through chemical and non-chemical preventive measures such as mosquito coils or repellent, insecticide-treated nets, and long-sleeved clothing. Vector control methods are the primary strategy for reducing the spread of VBDs, and for some diseases such as Zika and chikungunya, they are the only viable method due to a lack of a vaccine or preventive drug \cite{wilson_importance_2020}. While vector control methods are effective \cite{wilson_importance_2020, chala_emerging_2021}, they are arguably insufficient as standalone remedies due to issues such as rising mosquito resistance to insecticides \cite{hemingway_averting_2016}, labour and funding disputes \cite{winch_effectiveness_1992}, and insufficient coverage and access rates within communities \cite{okumu_what_2022}. The current over-reliance on vector control commodities combined with the historical failings of global health institutions to respond timely and effectively to emerging diseases \cite{bardosh_addressing_2017} has recently motivated a community-oriented approach for addressing VBDs.
+Vector control aims to limit human-vector contact through chemical and non-chemical preventive measures such as mosquito repellent, insecticide-treated nets, and long-sleeved clothing. Vector control methods are the primary strategy for reducing the spread of VBDs, and for some diseases, they are the only viable method due to a lack of a vaccine or preventive drug \cite{wilson_importance_2020}. While vector control methods are effective \cite{wilson_importance_2020, chala_emerging_2021}, they are arguably insufficient as standalone remedies due to issues such as rising mosquito resistance to insecticides \cite{hemingway_averting_2016}, labour and funding disputes \cite{winch_effectiveness_1992}, and insufficient coverage and access rates within communities \cite{okumu_what_2022}. The current over-reliance on vector control commodities combined with the historical failings of global health institutions to effectively respond to emerging diseases in a timely manner \cite{bardosh_addressing_2017} has recently motivated a community-oriented approach for addressing VBDs.
 
-Community-based interventions (CBIs) are targeted approaches to address the expansion and emergence of VBDs that emphasise the \q{needs and capacities of vulnerable population groups and local stakeholders} \cite{bardosh_addressing_2017}. Examples of CBIs include community empowerment campaigns, ecosystem management projects, and waste management programs \cite{perez_realist_2021}. While CBIs can ultimately increase vector control efficacy and reduce VBD severity, they primarily rely on influencing community participation and voluntary adoption of preventive practices, which are mainly driven by individuals' perceived risk of infection and personal behavioural attitudes \cite{brewer_risk_2004, raude_public_2012, lopes-rafegas_contribution_2023}. Therefore, in order to effectively support self-protection against VBDs within at-risk communities, policymakers need to understand the interaction between risk perception, preventive behaviours, and disease spread.
+Community-based interventions (CBIs) are targeted approaches to address the expansion and emergence of VBDs. They emphasise the \q{needs and capacities of vulnerable population groups and local stakeholders} \cite{bardosh_addressing_2017}, and examples include community empowerment campaigns, ecosystem management projects, and waste management programs \cite{perez_realist_2021}. While CBIs can ultimately increase vector control efficacy and reduce VBD severity, they primarily rely on influencing community engagement and participation in preventive measures, which are influenced by individuals' behavioural attitudes and perceived risk of infection \cite{winch_effectiveness_1992, brewer_risk_2004, raude_public_2012, lopes-rafegas_contribution_2023}. Therefore, in order to effectively support self-protection against VBDs within at-risk communities, policymakers need to understand the interaction between disease spread, risk perception, and \textit{preventive behaviours}---behaviours that involve the use of preventive measures.
 
-Agent-based models (ABMs) are computational tools that have been extensively used in epidemiology to study the dynamics of diseases in the context of public health \cite{tracy_agent-based_2018, speybroeck_simulation_2013}. In contrast to traditional equation-based models that express the dynamics of systems holistically through relationships in system variables \cite{van_dyke_parunak_agent-based_1998}, agent-based modelling is a \textit{bottom-up} approach that employs a population of heterogeneous and autonomous \textit{agents} to reproduce emergent behaviour through stochastic interactions \cite{epstein_growing_1996}. Due to their computational implementation, ABMs allow practitioners to easily implement counterfactual scenarios to study hypothetical interventions, and explicitly represent properties of systems, such as schedules that dictate when agents go to school or work \cite{pangallo_unequal_2023}, or hierarchical social structures that determine agents' habits \cite{xu_synthetic_2017}.
+Risk perception and preventive behaviours have historically been neglected by mathematical models for VBD spread. Traditional equation-based models (EBMs) express the dynamics of systems holistically through relationships in system variables \cite{van_dyke_parunak_agent-based_1998}, and have been applied extensively in epidemiology and VBD modelling \cite{reiner_systematic_2013}. The holistic nature of EBMs means they are designed for homogeneous populations, and adding additional characteristics of systems (e.g. human behaviour, socioeconomic factors) is cumbersome as more equations need to be added to the model \cite{hunter_comparison_2018}. Alternatively, agent-based modelling is a \textit{bottom-up} approach that employs a population of heterogeneous and autonomous agents to reproduce emergent behaviour through stochastic interactions \cite{epstein_growing_1996}. Due to their computational implementation, agent-based models (ABMs) allow practitioners to simulate hypothetical interventions without overhauling model architecture, unlike EBMs \cite{axtell_agent-based_2022}. Furthermore, the bottom-up approach to simulating systems at the agent-level means heterogeneous factors of individuals, such as risk perception or behaviour, can be naturally incorporated within ABMs.
 
-ABMs have previously been used to examine how risk perception and preventive behaviours may affect disease dynamics in other infectious diseases \cite{abdulkareem_risk_2020, mao_modeling_2014, kandiah_empirical_2017, du_how_2021, tully_coevolution_2013, andrews_disease_2015}, and specifically applied to VBDs to study disease spread in various geographical and spatial regions \cite{krzhizhanovskaya_agent-based_2020, selvaraj_vector_2020, manore_network-patch_2015, linard_multi-agent_2009, jacintho_agent-based_2010, perkins_agent-based_2019, mulyani_agent_2017, maneerat_spatial_2016}. There is sparse research, however, that investigates how CBIs affect the spread of VBDs alongside the adoption of preventive measures, despite the fact that active community engagement has been shown to be necessary for effective vector control campaigns \cite{winch_effectiveness_1992, rivera_adoption_2023}. Furthermore, there is a minimal body of modelling research that explores how human behaviour and risk perception interact to compel the adoption of preventive measures for VBDs, despite existing literature suggesting the importance of incorporating agent decision-making processes in such models \cite{scheidegger_agent-based_2017, mateus_c_modeling_2021}.
+Although the field is still evolving, ABMs have become popular tools for infectious disease modelling in public health contexts where heterogeneity is important \cite{tracy_agent-based_2018}. There is a growing body of research around VBD modelling for various geographical and spatial regions \cite{krzhizhanovskaya_agent-based_2020, selvaraj_vector_2020, manore_network-patch_2015, linard_multi-agent_2009, jacintho_agent-based_2010, perkins_agent-based_2019, mulyani_agent_2017, maneerat_spatial_2016} and the effects of risk perception and preventive behaviours on other infectious diseases \cite{mao_modeling_2014, kandiah_empirical_2017, du_how_2021, tully_coevolution_2013, andrews_disease_2015}. There is sparse research, however, that investigates how CBIs affect the spread of VBDs alongside the adoption of preventive measures, despite the fact that active community engagement has been shown to be necessary for effective vector control campaigns \cite{winch_effectiveness_1992, rivera_adoption_2023}. Furthermore, while psychological behavioural theories of decision-making such as the Health Belief Model \cite{becker_health_1974} and Protection Motivation Theory \cite{rogers_protection_1975} have previously been implemented in ABMs to simulate preventive behaviours \cite{abdulkareem_intelligent_2018, abdulkareem_risk_2020}, the area remains understudied, especially in the context of VBDs. Lastly, few research efforts have investigated the impacts of using different behavioural theories on disease spread in models, despite existing literature suggesting the importance of incorporating decision-making processes in ABMs \cite{scheidegger_agent-based_2017, mateus_c_modeling_2021}.
 
-% \subsection{Research objectives and aims}
+\subsection{Research aims, questions, and objectives}\label{sec:research-aims}
 
-The \todo{Should I explicitly state the research gaps, or is this segue OK?}two gaps in the literature outlined above form the basis of the following research questions:
+The two gaps in the literature outlined above---a lack of attention to behavioural theories for decision-making in ABMs, and little research to indicate how CBIs affect VBD spread alongside vector control---motivate the research aims of this proposed project. Firstly, this project aims to use computational models to illuminate the effects of different behavioural decision-making theories on the adoption of preventive measures and VBD spread. Secondly, this project aims to investigate and evaluate effective strategies for CBIs to target VBD spread in the context of risk perception and preventive behaviours.
+
+To make progress toward these research aims, I propose the following research questions:
 
 \begin{questions}
 
-\item How do alternative behavioural frameworks influence disease spread and the adoption of preventive measures in an agent-based model for a vector-borne disease?\label{rq1}
+% \item How do alternative behavioural frameworks influence disease spread and the adoption of preventive measures in an agent-based model for a vector-borne disease?\label{rq1}
 
-\item How do targeted community-based interventions affect risk perception and the \hlnote{long-term}{Should I motivate why \textit{long-term}?} adoption of preventive behaviours for a vector-borne disease within an agent-based model?\label{rq2}
+% \item How do targeted community-based interventions affect risk perception and the long-term adoption of preventive behaviours for a vector-borne disease within an agent-based model?\label{rq2}
+
+\item How does the choice of psychological behavioural theory influence the dynamics of computational models for vector-borne disease spread and preventive behaviours?\label{rq1}
+
+\item In such models, how do targeted community-based interventions affect risk perception and long-term preventive behaviours for a vector-borne disease?\label{rq2}
 
 \end{questions}
 
-This research aims to address these questions through a project of two phases with the following aims: \ref{rq1} aims to answer the open question of how encoding different behavioural frameworks in ABMs affects disease dynamics by creating a general VBD ABM with integrated agent decision-making processes. Within this baseline model, \ref{rq2} aims to investigate how targeted CBIs influence disease dynamics through the interaction of risk perception and \hlnote{preventive behaviours}{Not defined, is this an issue?}.
+In addressing \ref{rq1}, I will contribute a methodological study to the field of VBD modelling by creating a general model of VBD spread with integrated preventive behaviours, and I will analyse the impacts of different behavioural theories that motivate self-protection. I will then address \ref{rq2} by simulating one or more CBIs within the produced foundational model to examine the impacts and efficacy of interventions alongside risk perception and preventive behaviours.
+
+Specifically, the research objectives for \ref{rq1} will be to:
+
+\begin{enumerate}
+
+\item Extend an existing ABM for VBD spread to incorporate preventive measures, risk perception, and a decision-making submodel embedded in agents.
+
+\item Computationally encode three behavioural theories embedded in agents.
+
+\item Analyse the impacts of different behavioural theories on preventive behaviours and disease spread for VBDs.
+
+\item Validate the extended ABM against hypothetical scenarios to ensure the ABM reproduces epidemiological patterns found in VBD literature.
+
+\end{enumerate}
+
+The research objectives for \ref{rq2} will be to:
+
+\begin{enumerate}
+\item Use the ABM from the first phase to model different CBIs for preventing VBD spread.
+\item Analyse the characteristics of effective CBIs in the ABM.
+\end{enumerate}
+
+In Section~\ref{sec:approach}, I describe the approach to fulfilling the research objectives listed above.
+
+The structure of this proposal is as follows: First, I provide a brief background of VBDs before reviewing the current research landscape of mathematical and agent-based modelling in the context of risk perception and human behaviour. Second, I outline the intended methods to carry out the research and provide a timeline for the research project. Finally, I describe the prospective contributions and implications the research will have.\vspace{.5cm}
+
+
+
+% This research aims to address these questions through a project of two phases with the following aims: \ref{rq1} aims to answer the open question of how encoding different behavioural frameworks in ABMs affects disease dynamics by creating a general VBD ABM with integrated agent decision-making processes. Within this baseline model, \ref{rq2} aims to investigate how targeted CBIs influence disease dynamics through the interaction of risk perception and preventive behaviours.
 
 
 % \subsection{Proposal structure}
 
 
-The structure of this proposal is as follows: First, I present an overview of existing work surrounding agent-based modelling, risk perception, mitigation methods for VBDs, and human behaviour to establish context and motivation for the project. Second, I outline the intended methods to carry out the research and the objectives of the two phases. Finally, I describe the prospective contributions and implications the research will have if successfully carried out.\vspace{.5cm}
+% The structure of this proposal is as follows: First, I present an overview of existing work surrounding agent-based modelling, risk perception, mitigation methods for VBDs, and human behaviour to establish context and motivation for the project. Second, I outline the intended methods to carry out the research and the objectives of the two research questions. Finally, I describe the prospective contributions and implications the research will have.\vspace{.5cm}
 
-
-
-\todo[inline]{Some additional concerns: I haven't formally defined preventive measures, preventive behaviour, or what a behavioural framework is. Are these OK to wait until the literature review, or should I have one/two-liners for these where appropriate?
-
-\vspace{.5cm}
-
-There are also no visuals, which I feel may make this less pleasant to read. If you think the ABM introduction could be aided by more detail (and perhaps a comparison to ODEs), I could add SIR figures, or a basic visualisation of Schelling's model of segregation as a seminal example of agent-based modelling?}
