Reshape repo structure

--- a/analysis/02_baseline/reproduce_results.ipynb
+++ b/analysis/02_baseline/reproduce_results.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "bc6c7d63-ea35-4d87-8f50-5e61a6054798",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,11 @@
     "matplotlib_inline.backend_inline.set_matplotlib_formats('svg')\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from model import *"
+    "import sys\n",
+    "\n",
+    "sys.path.append(\"../../models/baseline\")\n",
+    "\n",
+    "from model.model import *"
    ]
   },
   {
@@ -64,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "40832b6b-8e08-403f-8335-00945d55d249",
    "metadata": {},
    "outputs": [],
@@ -105,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f9c12482-a9c6-4168-9249-19e73ab7b3ce",
    "metadata": {},
    "outputs": [],
@@ -146,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "1d3d3f21-0e75-4b4b-ab11-f86b191aab0f",
    "metadata": {},
    "outputs": [],
@@ -187,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a31335e3-0ba0-4399-afbd-6957a467ead5",
    "metadata": {},
    "outputs": [],
